// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render > renders detail mode with title + Back 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8"><style>
  body { color: var(--vscode-foreground); background: var(--vscode-sideBar-background); font-family: var(--vscode-font-family); font-size: var(--vscode-font-size); margin: 0; padding: 0; }
  .tackle-list { list-style: none; margin: 0; padding: 0; }
  .tackle-list li { padding: 4px 12px; cursor: pointer; }
  .tackle-list li:hover { background: var(--vscode-list-hoverBackground); }
  .tackle-list li.active { background: var(--vscode-list-activeSelectionBackground); color: var(--vscode-list-activeSelectionForeground); }
  .tackle-empty { padding: 12px; color: var(--vscode-descriptionForeground); }
  .tackle-detail { padding: 8px 12px; }
  .tackle-detail-header { font-weight: bold; margin-bottom: 8px; }
  .tackle-back { background: var(--vscode-button-background); color: var(--vscode-button-foreground); border: none; padding: 4px 12px; cursor: pointer; }
  .tackle-back:hover { background: var(--vscode-button-hoverBackground); }
</style></head><body><div class="tackle-detail">
  <div class="tackle-detail-header">Detail: Add feature</div>
  <button class="tackle-back" data-action="exitDetail">Back</button>
</div></body></html>"
`;

exports[`render > renders empty list state (no tasks) 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8"><style>
  body { color: var(--vscode-foreground); background: var(--vscode-sideBar-background); font-family: var(--vscode-font-family); font-size: var(--vscode-font-size); margin: 0; padding: 0; }
  .tackle-list { list-style: none; margin: 0; padding: 0; }
  .tackle-list li { padding: 4px 12px; cursor: pointer; }
  .tackle-list li:hover { background: var(--vscode-list-hoverBackground); }
  .tackle-list li.active { background: var(--vscode-list-activeSelectionBackground); color: var(--vscode-list-activeSelectionForeground); }
  .tackle-empty { padding: 12px; color: var(--vscode-descriptionForeground); }
  .tackle-detail { padding: 8px 12px; }
  .tackle-detail-header { font-weight: bold; margin-bottom: 8px; }
  .tackle-back { background: var(--vscode-button-background); color: var(--vscode-button-foreground); border: none; padding: 4px 12px; cursor: pointer; }
  .tackle-back:hover { background: var(--vscode-button-hoverBackground); }
</style></head><body><div class="tackle-empty">No tasks.</div></body></html>"
`;

exports[`render > renders list mode with several tasks (titles only) 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8"><style>
  body { color: var(--vscode-foreground); background: var(--vscode-sideBar-background); font-family: var(--vscode-font-family); font-size: var(--vscode-font-size); margin: 0; padding: 0; }
  .tackle-list { list-style: none; margin: 0; padding: 0; }
  .tackle-list li { padding: 4px 12px; cursor: pointer; }
  .tackle-list li:hover { background: var(--vscode-list-hoverBackground); }
  .tackle-list li.active { background: var(--vscode-list-activeSelectionBackground); color: var(--vscode-list-activeSelectionForeground); }
  .tackle-empty { padding: 12px; color: var(--vscode-descriptionForeground); }
  .tackle-detail { padding: 8px 12px; }
  .tackle-detail-header { font-weight: bold; margin-bottom: 8px; }
  .tackle-back { background: var(--vscode-button-background); color: var(--vscode-button-foreground); border: none; padding: 4px 12px; cursor: pointer; }
  .tackle-back:hover { background: var(--vscode-button-hoverBackground); }
</style></head><body><ul class="tackle-list"><li class="tackle-task" data-task-id="1">Fix bug</li><li class="tackle-task active" data-task-id="2">Add feature</li><li class="tackle-task" data-task-id="3">Write docs</li></ul></body></html>"
`;
